# ImageSlideShow

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: 3rdParty.cmake
src/: CMakeLists.txt  centralviewer.cpp  centralviewer.h  helper.cpp  helper.h  imageextractor.cpp  imageextractor.h  imagestream.cpp  imagestream.h  issmainwindow.cpp  issmainwindow.h  logger.cpp  logger.h  main.cpp  resource.qrc
src/ui/: issmainwindow.ui
